--- a/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
+++ b/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
@@ -56,11 +56,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="formGestioneUt.cs">
+    <Compile Include="FormGestioneUtente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="formGestioneUt.Designer.cs">
-      <DependentUpon>formGestioneUt.cs</DependentUpon>
+    <Compile Include="FormGestioneUtente.Designer.cs">
+      <DependentUpon>FormGestioneUtente.cs</DependentUpon>
     </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
@@ -74,11 +74,11 @@
     <Compile Include="FormMenu.Designer.cs">
       <DependentUpon>FormMenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form3.cs">
+    <Compile Include="FormGestioneProdotti.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form3.Designer.cs">
-      <DependentUpon>Form3.cs</DependentUpon>
+    <Compile Include="FormGestioneProdotti.Designer.cs">
+      <DependentUpon>FormGestioneProdotti.cs</DependentUpon>
     </Compile>
     <Compile Include="Form4.cs">
       <SubType>Form</SubType>
@@ -97,8 +97,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UtenteMapper.cs" />
-    <EmbeddedResource Include="formGestioneUt.resx">
-      <DependentUpon>formGestioneUt.cs</DependentUpon>
+    <EmbeddedResource Include="FormGestioneUtente.resx">
+      <DependentUpon>FormGestioneUtente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
@@ -106,8 +106,8 @@
     <EmbeddedResource Include="FormMenu.resx">
       <DependentUpon>FormMenu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form3.resx">
-      <DependentUpon>Form3.cs</DependentUpon>
+    <EmbeddedResource Include="FormGestioneProdotti.resx">
+      <DependentUpon>FormGestioneProdotti.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form4.resx">
       <DependentUpon>Form4.cs</DependentUpon>
