--- a/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
+++ b/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
@@ -80,11 +80,17 @@
     <Compile Include="FormGestioneProdotti.Designer.cs">
       <DependentUpon>FormGestioneProdotti.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form4.cs">
+    <Compile Include="FormAggiuntaProd.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form4.Designer.cs">
-      <DependentUpon>Form4.cs</DependentUpon>
+    <Compile Include="FormAggiuntaProd.Designer.cs">
+      <DependentUpon>FormAggiuntaProd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormModificaProd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormModificaProd.Designer.cs">
+      <DependentUpon>FormModificaProd.cs</DependentUpon>
     </Compile>
     <Compile Include="FormRegistrazione.cs">
       <SubType>Form</SubType>
@@ -108,8 +114,11 @@
     <EmbeddedResource Include="FormGestioneProdotti.resx">
       <DependentUpon>FormGestioneProdotti.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form4.resx">
-      <DependentUpon>Form4.cs</DependentUpon>
+    <EmbeddedResource Include="FormAggiuntaProd.resx">
+      <DependentUpon>FormAggiuntaProd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormModificaProd.resx">
+      <DependentUpon>FormModificaProd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormRegistrazione.resx">
       <DependentUpon>FormRegistrazione.cs</DependentUpon>
