--- a/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
+++ b/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
@@ -56,6 +56,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormEliminaProd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEliminaProd.Designer.cs">
+      <DependentUpon>FormEliminaProd.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormGestioneUtente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,9 +105,14 @@
       <DependentUpon>FormRegistrazione.cs</DependentUpon>
     </Compile>
     <Compile Include="GestioneDB.cs" />
+    <Compile Include="ListaProdotti.cs" />
+    <Compile Include="ProdottoMapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UtenteMapper.cs" />
+    <EmbeddedResource Include="FormEliminaProd.resx">
+      <DependentUpon>FormEliminaProd.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormGestioneUtente.resx">
       <DependentUpon>FormGestioneUtente.cs</DependentUpon>
     </EmbeddedResource>
