--- a/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
+++ b/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
@@ -57,6 +57,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AttrezzoMapper.cs" />
+    <Compile Include="FormAggiungiRic.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAggiungiRic.Designer.cs">
+      <DependentUpon>FormAggiungiRic.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormAggiuntaAtt.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,12 @@
     </Compile>
     <Compile Include="FormEliminaProd.Designer.cs">
       <DependentUpon>FormEliminaProd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormGestioneRicette.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormGestioneRicette.Designer.cs">
+      <DependentUpon>FormGestioneRicette.cs</DependentUpon>
     </Compile>
     <Compile Include="FormGestioneAttrezzatura.cs">
       <SubType>Form</SubType>
@@ -134,7 +146,11 @@
     <Compile Include="ProdottoMapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RicettaMapper.cs" />
     <Compile Include="UtenteMapper.cs" />
+    <EmbeddedResource Include="FormAggiungiRic.resx">
+      <DependentUpon>FormAggiungiRic.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormAggiuntaAtt.resx">
       <DependentUpon>FormAggiuntaAtt.cs</DependentUpon>
     </EmbeddedResource>
@@ -143,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormEliminaProd.resx">
       <DependentUpon>FormEliminaProd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormGestioneRicette.resx">
+      <DependentUpon>FormGestioneRicette.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormGestioneAttrezzatura.resx">
       <DependentUpon>FormGestioneAttrezzatura.cs</DependentUpon>
