--- a/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
+++ b/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
@@ -63,6 +63,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AttrezzoMapper.cs" />
+    <Compile Include="FormAggiungiProdottiRicetta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAggiungiProdottiRicetta.Designer.cs">
+      <DependentUpon>FormAggiungiProdottiRicetta.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormAggiungiRic.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -172,6 +178,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RicettaMapper.cs" />
     <Compile Include="UtenteMapper.cs" />
+    <EmbeddedResource Include="FormAggiungiProdottiRicetta.resx">
+      <DependentUpon>FormAggiungiProdottiRicetta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormAggiungiRic.resx">
       <DependentUpon>FormAggiungiRic.cs</DependentUpon>
     </EmbeddedResource>
