--- a/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
+++ b/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AttrezzoMapper.cs" />
+    <Compile Include="cheBirraFaccio.cs" />
     <Compile Include="FormAggiungiProdottiRicetta.cs">
       <SubType>Form</SubType>
     </Compile>
