--- a/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
+++ b/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
@@ -31,7 +31,7 @@
     <ProductName>ProgettoBirraGruppo3</ProductName>
     <PublisherName>ProgettoBirraGruppo3</PublisherName>
     <SuiteName>ProgettoBirraGruppo3</SuiteName>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>4</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -68,7 +68,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MySql.Data">
