--- a/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
+++ b/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
@@ -77,6 +77,7 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>ProgettoBirra_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="MySql.Data">
       <HintPath>.\MySql.Data.DLL</HintPath>
