Correzione errore esecuzione

--- a/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
+++ b/ProgettoBirra/ProgettoBirra/ProgettoBirra.csproj
@@ -75,7 +75,8 @@
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>ProgettoBirra_TemporaryKey.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
@@ -264,7 +265,6 @@
       <Link>provapbcsharp.ruleset</Link>
     </None>
     <None Include="packages.config" />
-    <None Include="ProgettoBirra_TemporaryKey.pfx" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
